--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "Ecommerce",
   "version": "1.0.0",
   "description": "",
-  "main": "./src/app.js",
+  "main": "./src/server.js",
   "scripts": {
     "start": "node .",
     "start:local": "node -r dotenv/config . --port 8080",
