--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "Ecommerce",
   "version": "1.0.0",
   "description": "",
-  "main": "./src/server.js",
+  "main": "./src/app.js",
   "scripts": {
     "start": "node .",
     "start:local": "node -r dotenv/config . --port 8080",
     "start:cluster": "node -r dotenv/config . --port 8080 --mode cluster",
-    "dev": "nodemon --legacy-watch --ignore './public/*' -r dotenv/config . --port 8080",
+    "dev": "nodemon --legacy-watch --ignore './public/*' -r dotenv/config . --port 8081",
     "dev:cluster": "nodemon --legacy-watch --ignore './public/*' -r dotenv/config . --port 8080 --mode cluster",
     "forever:fork": "forever start --watch . --port 8080",
     "forever:cluster": "forever start --watch . --port 8080 --mode cluster",
